<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="12.5dp"
    android:paddingRight="12.5dp">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/app_txt_color_gray"
        android:text="@string/wallet_import_keystore_tips_txt"/>

    <EditText
        android:id="@+id/keystoreEt"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/shape_corner_gray"
        android:hint="@string/wallet_import_keystore_et_hint_txt"
        android:paddingLeft="15dp"
        android:paddingTop="12dp"
        android:gravity="top"/>

    <TextView
        android:layout_marginTop="17.5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/app_txt_color_gray_2"
        android:text="@string/wallet_import_wallet_name_txt"/>

    <EditText
        android:id="@+id/walletNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wallet_import_wallet_name_et_hint_txt"
        android:textSize="14sp"/>

    <TextView
        android:layout_marginTop="17.5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/app_txt_color_gray_2"
        android:text="@string/password_for_keystore_txt"/>

    <com.bupocket.view.DrawableEditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_for_keystore_et_hint_txt"
        android:drawableRight="@mipmap/icon_close_eye"
        android:textSize="14sp"/>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/startImportKeyStoreBtn"
        android:layout_width="match_parent"
        android:layout_height="43.5dp"
        android:gravity="center"
        android:layout_marginTop="37dp"
        android:text="@string/start_import_wallet"
        app:qmui_borderColor="@color/app_color_main"
        app:qmui_backgroundColor="@color/app_color_main"
        app:qmui_radius="5dp"
        android:textColor="@color/app_color_font"
        android:textSize="@dimen/bp_btn_text_size"/>

    <LinearLayout
        android:id="@+id/understandKeystoreBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="44dp"
        android:gravity="right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/understand_keystore_txt"/>

        <ImageView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_help_tips"/>
    </LinearLayout>
</LinearLayout>