<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qmui_config_color_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/qmui_topbar_height"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/change_the_password_txt"
                android:theme="@style/BPViewTitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="12.5dp"
                android:text="@string/change_pwd_old_pwd"/>

            <EditText
                android:id="@+id/oldPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginHorizontal="12.5dp"
                android:inputType="textPassword"
                android:theme="@style/BPEditText"
                android:hint="@string/change_pwd_old_pwd_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="12.5dp"
                android:text="@string/change_pwd_new_pwd"/>

            <EditText
                android:id="@+id/newPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:layout_marginHorizontal="12.5dp"
                android:theme="@style/BPEditText"
                android:hint="@string/change_pwd_new_pwd_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="12.5dp"
                android:text="@string/change_pwd_new_pwd_confirm"/>

            <EditText
                android:id="@+id/newPasswordConfirmET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/BPEditText"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:layout_marginHorizontal="12.5dp"
                android:hint="@string/change_pwd_new_pwd_confirm_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true">

                <RelativeLayout
                    style="@style/button_wrapper_style"
                    android:layout_gravity="bottom"
                    android:padding="10dp">

                    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                        android:id="@+id/nextChangePwdBtn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bp_btn_hight"
                        android:layout_centerInParent="true"
                        android:enabled="false"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/send_form_next_btn_txt"
                        android:textColor="@color/app_color_font"
                        android:textSize="@dimen/bp_btn_text_size"
                        app:qmui_backgroundColor="@color/disabled_btn_color"
                        app:qmui_borderColor="@color/disabled_btn_color"
                        app:qmui_radius="5dp" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/qmui_topbar_height"
        android:fitsSystemWindows="true"/>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
