<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qmui_config_color_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:paddingTop="10dp"
            android:text="@string/help_txt"
            android:theme="@style/BPViewTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textSize="16sp"
            android:layout_marginHorizontal="12.5dp"
            android:text="@string/help_title_txt"/>
        
        <EditText
            android:id="@+id/feedbackContentET"
            android:layout_width="match_parent"
            android:layout_height="125.5dp"
            android:hint="@string/help_hint"
            android:gravity="left|top"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="12.5dp"
            android:background="@color/help_feedback_et_background_color" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="12.5dp"
            android:text="@string/contact_title_txt"/>
        
        <EditText
            android:id="@+id/contactET"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/contact_hint"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="12.5dp"
            android:background="@color/help_feedback_et_background_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                style="@style/button_wrapper_style"
                android:layout_gravity="bottom"
                android:padding="10dp">

                <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                    android:id="@+id/nextHelpFeedbackBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bp_btn_hight"
                    android:layout_centerInParent="true"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/submit_feedback_btn_txt"
                    android:textColor="@color/app_color_font"
                    android:textSize="@dimen/bp_btn_text_size"
                    app:qmui_backgroundColor="@color/app_btn_color_blue"
                    app:qmui_borderColor="@color/app_btn_color_blue"
                    app:qmui_radius="5dp" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"/>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
