<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:orientation="vertical"
        android:padding="@dimen/view_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_title_backup_wallet"
            android:theme="@style/BPViewTitle" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:contentDescription="TODO"
            android:src="@mipmap/icon_backup_wallet" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/backup_wallet_txt1"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/backup_wallet_txt2"
            android:textColor="#999999"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                style="@style/button_wrapper_style"
                android:layout_gravity="bottom"
                android:padding="10dp">

                <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                    android:id="@+id/backupWalletBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/backup_wallet_btn_txt"
                    android:textColor="@color/app_color_font"
                    android:textSize="18sp"
                    app:qmui_backgroundColor="@color/app_btn_color_blue"
                    app:qmui_borderColor="@color/app_btn_color_blue"
                    app:qmui_radius="5dp" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>